manifests/base/resources/chronos-worker/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chronos-worker
    chart: chronos-worker-1.4.9
    heritage: Helm
    release: chronos-worker
  name: chronos-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chronos-worker
      release: chronos-worker
  template:
    metadata:
      labels:
        app: chronos-worker
        chart: chronos-worker-1.4.9
        heritage: Helm
        release: chronos-worker
    spec:
      containers:
      - args:
        - -natsURI=$(NATS_URI)
        - -stanClusterID=$(NATS_STREAMING_CLUSTER_ID)
        - -jwtTokenAuthEnabled=true
        - -jwtTokenAuthURL=$(TOKEN_AUTH_URI)/v1/internal-tokens
        - -headerManagerEnabled=true
        - -jwtKid=$(TOKEN_AUTH_PRIVATE_KEY_ID)
        image: qliktech-docker.jfrog.io/chronos-worker:0.7.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 5
        name: main
        ports:
        - containerPort: 8080
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 5
      imagePullSecrets:
      - name: artifactory-docker-secret
---
