manifests/base/resources/chronos-worker/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: chronos-worker
    chart: chronos-worker-1.4.9
    heritage: Helm
    release: chronos-worker
  name: chronos-worker
spec:
  ports:
  - name: chronos-worker
    port: 8080
    targetPort: 8080
  selector:
    app: chronos-worker
---
