manifests/base/resources/chronos-worker/resources/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: chronos-worker
    chart: chronos-worker-1.4.9
    heritage: Helm
    release: chronos-worker
  name: chronos-worker-deny-external-egress
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector: {}
  podSelector:
    matchLabels:
      app: chronos-worker
  policyTypes:
  - Egress
---
